tests/neg/i12177.check
-- Error: tests/neg/i12177.scala:2:17 ----------------------------------------------------------------------------------
2 |  inline val v = null // error
  |                 ^^^^
  |                 `inline val` with `null` is not supported.
  |
  |                 To inline a `null` consider using `inline def`
-- Error: tests/neg/i12177.scala:4:17 ----------------------------------------------------------------------------------
4 |  inline val u = () // error
  |                 ^^
  |                 `inline val` of type `Unit` is not supported.
  |
  |                 To inline a `Unit` consider using `inline def`
-- Error: tests/neg/i12177.scala:6:18 ----------------------------------------------------------------------------------
6 |  inline val u2 = { println(); () } // error
  |                  ^^^^^^^^^^^^^^^^^
  |                  `inline val` of type `Unit` is not supported.
  |
  |                  To inline a `Unit` consider using `inline def`
-- Error: tests/neg/i12177.scala:7:18 ----------------------------------------------------------------------------------
7 |  inline val u3 = { } // error
  |                  ^^^
  |                  `inline val` of type `Unit` is not supported.
  |
  |                  To inline a `Unit` consider using `inline def`
